--- a/.html/hello.html
+++ b/.html/hello.html
@@ -13,7 +13,7 @@
 
         body {
             display: table;
-            background-color:#282A36
+            background-color:#18162E
         }
 
         .my-block {
