--- a/.html/newtab.html
+++ b/.html/newtab.html
@@ -13,7 +13,7 @@
 
         body {
             display: table;
-            background-color:#18162E
+            background-color:#151329
         }
 
         .my-block {
