--- a/.html/newtab.html
+++ b/.html/newtab.html
@@ -13,7 +13,7 @@
 
         body {
             display: table;
-            background-color:#151329
+            background-color:#0A0807
         }
 
         .my-block {
